# python-template

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  about.html  dev.requirements.txt  index.html  objects.inv  pyproject.toml  reference.html  requirements-dev.txt  requirements.txt  sitemap.xml
.github/: dependabot.yml
.github/workflows/: bot_automerge.yml  lint_and_test.yml
docs/: mkdocs.yaml
docs/docs/: about.md  index.md  reference.md
requirements/: dev.txt  main.txt
search/: search_index.json
src/mypackage/: example.py
tests/: test_example.py
